--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
-<head></head>
+<head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+</head>
 <html>
 	<body>
-		<h1>Vicuze</h1>
-		<p><a href="mailto:vicuze@gmail.com">Contact me</a></p>
-		<p>More content soon</p>
+		<header class="container">
+			<div class ="row">
+				<h1 class="col-sm-4">Vicuze</h1>
+			</div>
+		</header>
+		<section class="container">
+			<div class="row">
+				<figure class="col-sm-6">
+					<p><a href="mailto:vicuze@gmail.com">Contact me</a></p>
+				</figure>
+				<figure class="col-sm-6">
+					<p>More content soon</p>
+				</figure>
+			</div>
+		</section>
 	</body>
 </html>
